--- a/styles/bio.css
+++ b/styles/bio.css
@@ -59,6 +59,8 @@ a {
 }
 .header__logo {
   align-self: center;
+  width: 120px;
+  height: 20px;
 }
 @media (min-width: 1280px) {
   .header__logo {
@@ -88,7 +90,7 @@ a {
 }
 .header__item:active {
   color: #FFFFFF;
-  font-weight: bold;
+  font-family: "AvenirNextLTPro-Bold";
   border-bottom: 4px solid #FFFFFF;
 }
 @media (min-width: 768px) and (max-width: 1280px) {
@@ -104,7 +106,10 @@ a {
   }
 }
 .header__link {
-  font-family: "AvenirNextLTPro-Bold";
+  font-family: "AvenirNextLTPro-Regular";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 22px;
   color: #E1E1E1;
   margin-bottom: 1rem;
   margin-top: 1rem;
