Add shows section in JS

--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -1,6 +1,7 @@
 @use './partials/variables' as *;
 @use './partials/mixins' as *;
 @use './partials/typography';
+@use '../styles/partials/global' ;
 
 *{
   margin: 0;
@@ -10,108 +11,6 @@
 }
 a{
   text-decoration: none;
-}
-.header{
-    font-family: 'AvenirNextLTPro-Demi';
-    background-color:$bandsite-black;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items:center;
-    height:6rem;
-    font-size: 1rem;
-    line-height: 1rem;
-
-    @include tablet{
-      flex-direction: row;
-      justify-content: flex-start;
-      padding-left:2.25rem;
-      padding-right:2.25rem;
-      gap:3rem;
-    }
-    @include desktop{
-      padding-left: 5rem;
-      flex-direction: row;
-      justify-content: flex-start;
-    }
-   
-    &__nav{
-      display: flex;
-      justify-content: flex-start;
-
-      @include tablet{
-        height:95%;
-      }
-    }
-    &__logo{
-      align-self: center;
-      width:120px;
-      height:20px;
-
-      @include desktop{
-        padding-left: 2.25rem;
-      }
-    }
-    &__list{
-      width:320px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    
-      @include tablet{
-      }
-      
-      @include desktop{
-        gap:1.5rem;
-      }
-    }
-
-    &__item{
-      list-style: none;
-      color:$white;
-      height:2rem;
-      width:100%;
-      text-align: center;
-      
-      &:hover{
-        color: $white;
-      }
-
-      &:active{
-        color:$white;
-        font-family: 'AvenirNextLTPro-Bold';
-        border-bottom: 4px solid $white;
-      }
-      @include tablet{
-        height:5.5rem;
-        align-content: center;
-      }
-      @include desktop{
-        height:5.5rem;
-        align-content: center;
-      }
-    }
-
-    &__link{
-      // font-family: 'AvenirNextLTPro-Bold';
-      // color:$mercury;
-      @include font-style('AvenirNextLTPro-Regular',16px,400,22px,$mercury);
-      margin-bottom:1rem;
-      margin-top:1rem;
-
-      &:hover{
-        color:$pink;
-      }
-
-      @include desktop{
-        margin-right: 2.25rem;
-        margin-left: 2.25rem;
-     
-    }
-      @include tablet{
-        
-      }
-  }
 }
 
 .hero{
@@ -371,170 +270,3 @@ a{
   }
 }
 
-.footer{
-  background-color: $bandsite-black;
-  margin-top: 0.5rem;
-  display: flex;
-  flex-direction: column;
-
-  &__title{
-      padding: 24px 16px 16px 16px;
-      @include font-style('AvenirNextLTPro-Bold',24px,700,32px,$white);
-      
-      @include tablet{
-        @include font-style('AvenirNextLTPro-Demi',36px,700,44px,$white);
-        padding:24px 0 16px 0;
-      }
-
-      @include desktop{
-        @include font-style('AvenirNextLTPro-Demi',36px,700,44px,$white);
-        padding:0;
-      }
-  }
-  &__imgcontainer{
-    display: flex;
-    gap:1rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
-
-    @include tablet{
-      align-items: center;
-      width:45%;
-      padding:0.5rem;
-    }
-    @include desktop{
-      align-items: center;
-      width:50%;
-    }
-  }
-  &__parabold{
-    @include font-style('AvenirNextLTPro-Bold',13px,400,18px,$white);
-    padding: 1rem;    
-
-    @include tablet{
-      @include font-style('AvenirNextLTPro-Demi',14px,400,20px,$white);
-      padding: 0 0 2.25rem 0;
-    }
-
-    @include desktop{
-      @include font-style('AvenirNextLTPro-Demi',14px,400,20px,$white);
-      padding: 0 0 2.25rem 0;
-    }
-  }
-  &__para--contact{
-    @extend .footer__parabold;
-    font-family: 'AvenirNextLTPro-Regular';
-    padding:0 1rem 0 1rem;
-
-    @include tablet{
-      padding: 0 2.25rem 0 0;
-    }
-    @include desktop{
-      padding: 0 2.25rem 0 0;
-    }
-  }
-  &__para--email{
-    @extend .footer__para--contact;
-    padding: 1rem;
-
-    @include tablet{
-      padding: 2.25rem 2.25rem 2.25rem 0;
-    }
-    @include desktop{
-      padding: 1rem 1rem 1rem 0;
-    }
-  }
-  &__email{
-    text-decoration: none;
-    color:$white;
-  }
-  &__logo{
-    padding: 1rem;
-    width:7.5rem;
-
-    @include tablet{
-      width:0;
-      height:0;
-      visibility: hidden;
-      padding: 0;
-    }
-    @include desktop{
-      width:0;
-      height:0;
-      padding: 0;
-      visibility: hidden;
-    }
-  }
-  &__logo1{
-    visibility: hidden;
-
-    @include tablet{
-      visibility: visible;
-      width:7.5rem;
-      height:1.25rem;
-      flex-grow:2;
-      align-self: center;
-
-    }
-    @include desktop{
-      visibility: visible;
-      width:7.5rem;
-      height:1.25rem;
-      flex-grow:2;
-      align-self: center;
-    }
-  }
-  &__copyright{
-    @include font-style('AvenirNextLTPro-Regular',11px,200,18px,$white);
-    padding: 1rem; 
-
-    @include tablet{
-      @include font-style('AvenirNextLTPro-Regular',14px,400,20px,$white);
-      padding: 0 2.25rem 5rem 2.25rem;  
-    }
-    @include desktop{
-      @include font-style('AvenirNextLTPro-Regular',14px,400,20px,$white);
-      padding: 0 10rem 5rem 10rem;  
-    }
-  }
-  &__card1{
-    @include tablet{
-      display: flex;
-      padding: 2.5rem 2.25rem 2.25rem 2.25rem ;
-      justify-content: space-between;
-      align-items: center;
-    }
-    @include desktop{
-      display: flex;
-      justify-content: flex-start;
-      gap:2.5rem;
-      padding:2.5rem 10rem 1.25rem 10rem;
-    }
-  }
-  &__cardcontainer{
-    @include tablet{
-      display: flex;
-      flex-direction:row;
-      justify-content: space-between;
-      padding: 0 2.25rem 2.5rem 2.25rem;
-
-    }
-    @include desktop{
-      display: flex;
-      flex-direction:row;
-      justify-content: flex-start;
-      padding: 0 10rem 2.5rem 10rem;
-      gap:4rem;
-    }
-  }
-  &__card2{
-    @include tablet{
-      display: flex;
-      flex-direction: column;
-    }
-    @include desktop{
-      display: flex;
-      flex-direction: column;
-    }
-  }
-}
